--- a/src/main/resources/templates/editjson.html
+++ b/src/main/resources/templates/editjson.html
@@ -3,21 +3,12 @@
 <html>
 
 <head>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-
+	<script src="/js/jquery-latest-min.js"></script>
+	<script src="/js/bootstrap-min.js"></script>
 	<script src="/js/edittemplate.js"></script>
-
+	
+ 	<link href="/css/bootstrap.css" rel="stylesheet" />
+ 	<link href="/css/bootstrap-theme.css" rel="stylesheet" />
 </head>
 
 <div>
