--- a/src/main/resources/templates/editjson.html
+++ b/src/main/resources/templates/editjson.html
@@ -5,7 +5,7 @@
 <head>
 	<script src="/js/jquery-latest-min.js"></script>
 	<script src="/js/bootstrap-min.js"></script>
-	<script src="/js/edittemplate.js"></script>
+	<script src="/js/editjson.js"></script>
 	
  	<link href="/css/bootstrap.css" rel="stylesheet" />
  	<link href="/css/bootstrap-theme.css" rel="stylesheet" />
@@ -16,93 +16,23 @@
 	<br />
 </div>
 
-<form class="form-horizontal" role="form">
-
+<form class="form-horizontal" id="jsonForm" role="form">
+	<label>json模板ID:</label><label id="jsonId"></label>
+	<br />
+	<br />
+	<button id='edit' class="btn btn-primary">编辑</button>
+	<button id='save' class="btn btn-primary">保存</button>
+	<a href="http://www.bejson.com/" target="_blank">json格式在线校验</a>
+	<br />
 	<div id="template_edit" >
-		<div  class="form-group" >
-			<label class="col-sm-2 control-label">用户名:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="userId"   disabled="true" style="width:40%"></input>
-			</div>
-		</div>
-		
-		<div  class="form-group" >
-			<label class="col-sm-2 control-label">模板Id:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="templateId"  disabled="true" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">模板名称:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="templateName" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">备注信息:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="mark" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">AfterToDo:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="afterToDo" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">BeforeToDo:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="beforeToDo" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">Input2SqlMap:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="input2SqlMap" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">Output2SqlMap:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="output2SqlMap" style="width:40%"></input>
-			</div>
-		</div>
-
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">Sql2MongoMap:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="sql2MongoMap" style="width:40%"></input>
-			</div>
-		</div>
-		
-		
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">Output2MongoMap:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="output2MongoMap" style="width:40%"></input>
-			</div>
-		</div>
-		
-		<div  class="form-group">
-			<label class="col-sm-2 control-label">模板内容信息:</label>
-			<div class="col-sm-10">
-				<input class="form-control" id="templateDetail" style="width:40%"></input>
-			</div>
-		</div>
-		
+		<textarea id='jsonText'  style="margin: 0px; height: 800px; width: 1200px;display:none; resize: horizontal"></textarea>
+		<pre id='jsonPre' style="margin: 0px; height: 800px; width: 1200px;"></pre>
 	</div>
 	
 	
-	<div style="margin:0 auto;width:500px;"> 
-		<button id='save' type="submit" class="btn btn-primary"  >保存</button>
-	</div>
+
 </form>
+
+
 
 </html>
